[package]
name        = "turbo-remote-cache-rs"
version     = "0.2.1"
edition     = "2021"
license     = "MIT"
publish     = true
repository  = "https://github.com/salamaashoush/turbo-remote-cache-rs"
description = "A remote cache server for turbo"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web    = "^4"
serde        = { version = "^1.0", features = ["derive"] }
env_logger   = "^0.11"
log          = "^0.4"
actix-cors   = "^0.7"
dotenvy      = "^0.15"
futures-util = "^0.3"
object_store = { version = "^0.11", features = ["aws", "azure", "gcp"] }
